--- a/src/Components/Contact/Contact.css
+++ b/src/Components/Contact/Contact.css
@@ -78,7 +78,8 @@
     padding: 15px;
     border-radius: 4px;
     background: #32323c;
-    color: #a0a0a0;
+    color: white;
+    font-weight: 500;
     font-family: Outfit, sans-serif;
     font-size: 16px;
   }
