--- a/src/Components/Services/Services.css
+++ b/src/Components/Services/Services.css
@@ -48,13 +48,13 @@
     max-width: 300px;
   }
   
-  .services-readmore {
+  /* .services-readmore {
     display: flex;
     gap: 15px;
     align-items: center;
     margin-top: 20px;
   }
-  
+   */
   .services-format:hover {
     border: 2px solid #ff00ff;
     background-image: linear-gradient(45deg, #3f0028, #582300);
@@ -120,10 +120,10 @@
       line-height: 20px;
     }
   
-    .services-readmore {
+    /* .services-readmore {
       gap: 10px;
       font-size: 14px;
-    }
+    } */
   }
   
  
@@ -150,9 +150,9 @@
       line-height: 18px;
     }
   
-    .services-readmore {
+    /* .services-readmore {
       font-size: 12px;
       gap: 8px;
-    }
+    } */
   }
   
